# Bearing

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PORT_REGISTRY.md  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
docs/: SOLUTION_OVERVIEW.docx  SOLUTION_OVERVIEW.md  architecture.md  assessment-engine.md  business-case.md  maturity-model.md  pathfinder-integration.md  product-spec.md
docs-site/customer/: assessment-guide.md  dimensions-explained.md  faq.md  getting-started.md  index.md  maturity-model.md  package-lock.json  package.json  report-samples.md  solution-overview.md
docs-site/internal/: api-reference.md  architecture-deep-dive.md  assessment-engine.md  changelog.md  consulting-playbook.md  deployment-guide.md  dimension-scorer-reference.md  fusion-engine-reference.md  index.md  known-issues.md  package-lock.json  package.json  product-spec.md  production-release-guide.md  report-generator-reference.md  support-guide.md  technical-architecture.md  testing-guide.md  workarounds.md
docs/customer/: 01_getting_started.docx  01_getting_started.md  01_solution_overview.md  02_assessment_guide.docx  02_assessment_guide.md  03_dimensions_explained.md  03_reports_and_sow.docx  03_reports_and_sow.md  04_connections_guide.docx  04_connections_guide.md  04_maturity_model_guide.md  05_faq.docx  05_faq.md  06_faq.md  (+2 more)
prototype/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
scripts/: capture-screenshots.js  setup-hosts.sh
supabase/: seed.sql
(+217 files in other folders)
